p2/confs/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: elestio/pgadmin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: pgadmin
              protocol: TCP
          readinessProbe:
            httpGet:
              port: pgadmin
              path: /
