p2/confs/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: pgadmin
      port: 8080
      targetPort: pgadmin
