p2/confs/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: redis-commander
  ports:
    - name: redis-commander
      port: 8081
      targetPort: redis-commander
